--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
-    <h1>
-        hello 
-    </h1>
+   
+   <div class="parent ">
+    <div class="container">
+        <div class="row">
+        <p> one </p>
+        <p> two </p> 
+        <p> three </p>
+    </div>
+</div>
+</div>
 </body>
 </html>
